guacamole-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  namespace: netboot-guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacamole
      tier: frontend
  template:
    metadata:
      labels:
        app: guacamole
        tier: frontend
    spec:
      containers:
      - name: guacamole
        image: guacamole/guacamole
        imagePullPolicy: Always
        ports:
        - name: guacamole
          containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
