guacd-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd
  namespace: netboot-guacamole
spec:
  selector:
    matchLabels:
      run: guacd
  replicas: 1
  template:
    metadata:
      labels:
        run: guacd
    spec:
      containers:
      - name: guacd
        image:  guacamole/guacd
        ports:
        - containerPort: 4822
        readinessProbe:
          tcpSocket:
            port: 4822
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 4822
          initialDelaySeconds: 15
          periodSeconds: 20
