guacamole-service.yml
apiVersion: v1
kind: Service
metadata:
  name: guacamole
  namespace: netboot-guacamole
  labels:
    app: guacamole
    tier: frontend
spec:
  type: NodePort
  ports:
    - name: guacamole
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: guacamole
    tier: frontend
